# COMP3271_Computer_Graphics

./: README.md
Assignment1/: README.md
Assignment1/Part1/: CMakeLists.txt  code.cpp  code.h  main.cpp
Assignment1/Part2/: CMakeLists.txt  Camera.cpp  Camera.h  Main.cpp  MainFrame.cpp  MainFrame.h  Mesh.cpp  Mesh.h
Assignment1/Part2 /: MainFrame.cpp
Assignment2/: CMakeLists.txt  Camera.cpp  Camera.h  Common.h  MainFrame.cpp  MainFrame.h  Mesh.cpp  Mesh.h  README.md  fragment_shader.glsl  vertex_shader.glsl
Assignment3/: CMakeLists.txt  Camera.h  Common.h  Hittable.cpp  Hittable.h  Material.h  README.md  Ray.h  Scene.cpp  Scene.h  main.cpp
Assignment3/Utils/: happly.h  lodepng.cpp  lodepng.h
Assignment3/Utils/toml11/: README.md
Assignment3/mesh/: teapot.ply
Assignment3/scene/: spheres.toml  teapot_area_light.toml
PBR_exercise/: CMakeLists.txt  Hittable.cpp  Material.h  Scene.cpp  as3.cpp  as3.h  main.cpp
PBR_exercise/Utils/toml11/toml/: source_location.hpp
PBR_exercise/mesh/: monkey.ply
PBR_exercise/scene/: cornell_box.toml
TestOpenGL/: CMakeLists.txt  TestOpenGL.cpp
